Add educational disclaimer and anti-indexing measures

--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sign in with your account</title>
+    <title>Educational Phishing Demonstration - Information Security Research</title>
+    
+    <!-- Educational Purpose Declaration -->
+    <meta name="description" content="Educational phishing demonstration for information security research and cybersecurity training. Academic project for teaching social engineering awareness." />
+    <meta name="keywords" content="phishing demonstration, cybersecurity education, information security research, social engineering training, academic project" />
+    <meta name="author" content="Information Security Student Research Project" />
+    <meta name="robots" content="noindex, nofollow" />
+    <meta name="classification" content="Educational Research" />
+    <meta name="purpose" content="Academic Information Security Training" />
+    
+    <!-- Prevent indexing -->
+    <meta name="googlebot" content="noindex, nofollow" />
+    <meta name="googlebot-news" content="noindex, nofollow" />
   </head>
   <body>
     <div id="root"></div>
